# aiohttp-api

./: .gitignore  .pylintrc  README.md  config.py  pyproject.toml  server.py
api/: __init__.py
api/handlers/: __init__.py  foo.py
api/middlewares/: auth.py
api/models/: __init__.py  foo.py
api/routes/: foo.py
