[tool.poetry]
name = "aiohttp-api"
version = "0.1.0"
description = "AIOHTTP API Boilerplate"
authors = ["Merfrei <contact@merfrei.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
aiohttp = {extras = ["speedups"], version = "^3.8.1"}
asyncpg = "^0.25.0"
pydantic = "^1.9.0"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
pylint = "^2.12.2"
autopep8 = "^1.6.0"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
